# connectedhomeip-gd32vw55x-RGBTempHumSensorMatter

docs/: requirements.txt
examples/build_overrides/: gd32vw55x.gni  gd32w515.gni
examples/lighting-app/gd32mcu/gd32vw55x/: BUILD.gn  README.md  build_sdk_time_file.py  build_time.sh
examples/lighting-app/gd32mcu/gd32vw55x/include/: AppConfig.h  AppTask.h  ButtonHandler.h  CHIPProjectConfig.h  SensorManager.h  _build_date_t.h
examples/lighting-app/gd32mcu/gd32vw55x/src/: AppTask.cpp  ButtonHandler.cpp  SensorManager.cpp  ZclCallbacks.cpp  gd32vw55x_global.cpp  main.cpp  matter_shell.cpp
examples/temperature-measurement-app/gd32mcu/gd32vw55x/: BUILD.gn  README.md  args.gni  build_time.sh
examples/temperature-measurement-app/gd32mcu/gd32vw55x/include/: AppConfig.h  AppTask.h  ButtonHandler.h  CHIPProjectConfig.h  SensorManager.h  _build_date_t.h  gd32vw55x_global.h
examples/temperature-measurement-app/gd32mcu/gd32vw55x/src/: AppTask.cpp  ButtonHandler.cpp  SensorManager.cpp  ZclCallbacks.cpp  gd32vw55x_global.cpp  main.cpp  matter_shell.cpp
src/platform/gd32mcu/gd32vw55x/: BLEManagerImpl.cpp  BLEManagerImpl.h  BUILD.gn  BlePlatformConfig.h  CHIPDevicePlatformConfig.h  CHIPDevicePlatformEvent.h  CHIPMem-Platform.cpp  CHIPPlatformConfig.h  ConfigurationManagerImpl.cpp  ConfigurationManagerImpl.h  ConnectivityManagerImpl.cpp  ConnectivityManagerImpl.h  DiagnosticDataProviderImpl.cpp  DnssdImpl.cpp  FactoryDataParser.c  FactoryDataParser.h  FactoryDataProvider.cpp  FactoryDataProvider.h  InetPlatformConfig.h  KeyValueStoreManagerImpl.cpp  KeyValueStoreManagerImpl.h  Logging.cpp  LwIPCoreLock.cpp  NetworkCommissioningDriver.h  NetworkCommissioningWiFiDriver.cpp  PlatformManagerImpl.cpp  PlatformManagerImpl.h  SoftwareUpdateManagerImpl.h  SystemPlatformConfig.h  SystemTimeSupport.cpp  args.gni  gd32vw55xConfig.cpp  gd32vw55xConfig.h  gd32vw55xOTAImageProcessor.cpp  gd32vw55xOTAImageProcessor.h  gd32vw55xUtils.cpp  gd32vw55xUtils.h
src/platform/gd32mcu/gd32vw55x/route_hook/: gd32vw55x_route_hook.c  gd32vw55x_route_hook.h  gd32vw55x_route_table.c  gd32vw55x_route_table.h
src/platform/gd32mcu/gd32w515/: BUILD.gn  BlePlatformConfig.h  CHIPDevicePlatformConfig.h  CHIPDevicePlatformEvent.h  CHIPPlatformConfig.h  ConfigurationManagerImpl.cpp  ConfigurationManagerImpl.h  ConnectivityManagerImpl.cpp  ConnectivityManagerImpl.h  DeviceNetworkProvisioningDelegateImpl.cpp  DiagnosticDataProviderImpl.cpp  DiagnosticDataProviderImpl.h  InetPlatformConfig.h  KeyValueStoreManagerImpl.cpp  KeyValueStoreManagerImpl.h  Logging.cpp  NetworkCommissioningDriver.cpp  NetworkCommissioningDriver.h  PlatformManagerImpl.cpp  PlatformManagerImpl.h  SystemPlatformConfig.h  WarmPlatformConfig.h  args.gni  gd32w515Config.cpp  gd32w515Config.h  gd32w515Utils.cpp  gd32w515Utils.h
