# Copyright (c) 2021 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

declare_args() {
  # Root directory for gd32 SDK.
  gd32vw55x_sdk_build_root =
      "//third_party/connectedhomeip/third_party/gd32mcu/gd32vw55x"
}

declare_args() {
  # Root directory for gd32vw55x SDK sources.
  # gd32vw55x_sdk_root = "${gd32vw55x_sdk_build_root}/gd32vw55x_reslease_1.0"
  gd32vw55x_sdk_root = "${gd32vw55x_sdk_build_root}/GD32VW55x_RELEASE_V1.0.0"

  # # Root directory of toolchain of gd32vw55x chips
  # gd32vw55x_toolchain = "${gd32vw55x_sdk_build_root}/gd32vw55x_reslease_1.0/toolchain/riscv"
}
