# Copyright (c) 2021 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/chip.gni")
import("//build_overrides/pigweed.gni")
import("${chip_root}/src/platform/gd32mcu/gd32vw55x/args.gni")

# gd32vw55x_target_project =
#     get_label_info(":lighting_app_sdk_sources", "label_no_toolchain")
gd32vw55x_target_project = get_label_info(":sdk", "label_no_toolchain")

gd32vw55x_target_project_mbl = get_label_info(":sdk_mbl", "label_no_toolchain")

#set gd32vw55x toolchain
custom_toolchain = "${chip_root}/examples/platform/gd32mcu/gd32vw55x/custom_toolchain:riscv_gcc"

treat_warnings_as_errors = false

is_debug = false
# optimize_debug = false
# Optimization level for debug. Only has an effect if optimize_debug is true.
if (!is_debug) {
    optimize_debug_level = "s"
}
#optimize_debug_level = "s"

chip_error_logging = true
chip_progress_logging = true
chip_detail_logging = true
# chip_automation_logging = true
chip_enable_wifi = true
#chip_enable_ble = false
#chip_config_network_layer_ble = false
chip_enable_ble = true
chip_config_network_layer_ble = true

# chip_build_tests = true
# chip_enable_schema_check = true
chip_mdns = "minimal"

chip_build_libshell = true


##
if (chip_build_libshell) {
    chip_stack_lock_tracking = "none"
}
##

nuclei_toolchain = true

##wpa supplicant full function device enable
#gd_wpa_ffd_enable = true
gd32vw55x_wpas_lib = true

