# Copyright (c) 2020 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/chip.gni")
import("//build_overrides/gd32vw55x.gni")

import("${chip_root}/examples/platform/gd32mcu/gd32vw55x/args.gni")

chip_device_platform = "gd32vw55x"

lwip_platform = "gd32vw55x"

#ARM architecture flags will be set based on gd32vw55x_family.
riscv_platform_config = "${gd32vw55x_sdk_build_root}/gd32vw55x_riscv.gni"

mbedtls_target = "${gd32vw55x_sdk_build_root}:gd32vw55x_sdk"

lwip_ipv6 = true
lwip_ipv4 = true
lwip_api = true

chip_inet_config_enable_ipv4 = true
chip_inet_config_enable_dns_resolver = false

chip_build_tests = false
chip_inet_config_enable_tun_endpoint = false
chip_inet_config_enable_tcp_endpoint = true
chip_inet_config_enable_udp_endpoint = true
